--- a/aset/style/admin-game.css
+++ b/aset/style/admin-game.css
@@ -1,8 +1,9 @@
- @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 * {
   outline: none;
   box-sizing: border-box;
 }
+
 
 
 html {
@@ -349,27 +350,20 @@ img {
   padding: 20px 40px;
   height: 100%;
   overflow: auto;
-  background-color: rgba(16, 18, 27, 40%);
-  max-width: 100%; 
-  box-sizing: border-box;
+  background-color: rgba(16 18 27 / 40%);
 }
-
 @media screen and (max-width: 510px) {
   .content-wrapper {
     padding: 20px;
-    max-width: 100%;
   }
 }
-
 .content-wrapper-header {
   display: flex;
   align-items: center;
   width: 100%;
-  justify-content: space-between;
-background-color: rgb(146 151 179 / 13%);
   border-radius: 14px;
-  padding: 10px 40px;
-
+  padding: 20px 40px;
+  background-color:rgb(146 151 179 / 13%);
 }
 @media screen and (max-width: 415px) {
   .content-wrapper-header {
@@ -425,10 +419,7 @@ background-color: rgb(146 151 179 / 13%);
 }
 
 .content-wrapper-context {
-  max-width: 1000px;
-
-  margin-bottom: -50px;
-
+  max-width: 350px;
 }
 
 .content-button {
@@ -642,7 +633,7 @@ background-color: rgb(146 151 179 / 13%);
   box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.4);
   transition: all 0.3s;
   z-index: 10;
-  background-color: var(--rgb(22 25 37));
+  background-color: #181923;
   width: 500px;
   visibility: hidden;
   opacity: 0;
@@ -658,7 +649,7 @@ background-color: rgb(146 151 179 / 13%);
 }
 .pop-up.visible {
   visibility: visible;
-  opacity: 10;
+  opacity: 1;
 }
 .pop-up__title {
   padding-bottom: 20px;
@@ -683,10 +674,8 @@ background-color: rgb(146 151 179 / 13%);
 }
 
 .content-section .close {
-  margin-right: 20px;
-  margin-left: 20px;
-  width: 100px;
-  padding: 10px;
+  margin-right: 0;
+  width: 24px;
 }
 
 .checkbox-wrapper {
@@ -812,4 +801,159 @@ background-color: rgb(146 151 179 / 13%);
 ::-webkit-scrollbar-thumb {
   background: rgb(1 2 3 / 40%);
   border-radius: 10px;
+}
+
+    button, hr, input { overflow: visible; }
+    audio, canvas, progress, video { display: inline-block; }
+    progress, sub, sup { vertical-align: baseline; }
+    html { font-family: sans-serif; line-height: 1.15; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
+    body { margin: 0; }
+    menu, article, aside, details, footer, header, nav, section { display: block; }
+    h1 { font-size: 2em; margin: .67em 0; }
+    figcaption, figure, main { display: block; }
+    figure { margin: 1em 40px; }
+    hr { box-sizing: content-box; height: 0; }
+    code, kbd, pre, samp { font-family: monospace, monospace; font-size: 1em; }
+    a { background-color: transparent; -webkit-text-decoration-skip: objects; }
+    a:active, a:hover { outline-width: 0; }
+    abbr[title] { border-bottom: none; text-decoration: underline; text-decoration: underline dotted; }
+    b, strong { font-weight: bolder; }
+    dfn { font-style: italic; }
+    mark { background-color: #ff0; color: #000; }
+    small { font-size: 80%; }
+    sub, sup { font-size: 75%; line-height: 0; position: relative; }
+    sub { bottom: -.25em; }
+    sup { top: -.5em; }
+    audio:not([controls]) { display: none; height: 0; }
+    img { border-style: none; }
+    svg:not(:root) { overflow: hidden; }
+    button, input, optgroup, select, textarea { font-family: sans-serif; font-size: 100%; line-height: 1.15; margin: 0; }
+    button, input {}
+    button, select { text-transform: none; }
+    [type=submit], [type=reset], button, html [type=button] { -webkit-appearance: button; }
+    [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner, button::-moz-focus-inner { border-style: none; padding: 0; }
+    [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring, button:-moz-focusring { outline: ButtonText dotted 1px; }
+    fieldset { border: 1px solid silver; margin: 0 2px; padding: .35em .625em .75em; }
+    legend { box-sizing: border-box; color: inherit; display: table; max-width: 100%; padding: 0; white-space: normal; }
+    progress {}
+    textarea { overflow: auto; }
+    [type=checkbox], [type=radio] { box-sizing: border-box; padding: 0; }
+    [type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button { height: auto; }
+    [type=search] { -webkit-appearance: textfield; outline-offset: -2px; }
+    [type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration { -webkit-appearance: none; }
+    ::-webkit-file-upload-button { -webkit-appearance: button; font: inherit; }
+    summary { display: list-item; }
+    [hidden], template { display: none; }
+
+
+
+.kontai {
+  width: 100%;
+  width: 820px;
+  height: 340px; /* Pastikan kontainer memiliki tinggi yang sesuai */
+  display: flex;
+  gap: 10px;
+  margin-inline: 50px;
+}
+
+
+.card {
+  min-width: 70px;
+  height: 100%;
+  border-radius: 30px;
+  overflow: hidden;
+
+  display: flex;
+  align-items: flex-end;
+  flex-grow: 1;
+  cursor: pointer;
+  position: relative;
+  transition: flex-grow 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+
+  --transition-timing: 0.35s;
+}
+/* .card.active {
+  flex-grow: 100;
+} */
+.card:hover {
+  flex-grow: 7;
+}
+
+.card > .background {
+
+  position: absolute;
+  inset: 0;
+  object-fit: cover; /* Gambar akan di-zoom untuk mengisi seluruh kartu */
+  object-position: center; /* Pusat gambar tetap berada di tengah */
+  filter: brightness(0.4);
+  z-index: -1;
+  transition: var(--transition-timing) ease;
+  width: 100%;
+  height: 100%; /* Tambahkan ini untuk memastikan gambar mengisi seluruh kartu */
+}
+
+.card:hover > .background {
+  filter: brightness(1);
+}
+
+.card > .card-content {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 20px;
+  overflow: hidden;
+  transition: var(--transition-timing);
+  z-index: 10;
+}
+.card:hover > .card-content {
+  inset: 20px;
+  top: auto;
+}
+
+.card-content > * {
+  transition: var(--transition-timing);
+}
+
+.card-content > .profile-image {
+  min-width: 50px;
+  max-width: 50px;
+  height: 50px;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.card:hover .profile-image {
+  border: 1px solid rgb(110, 252, 205);
+}
+.profile-image > svg {
+  stroke: #fefefe;
+}
+.card:hover .profile-image > svg {
+  stroke: rgb(110, 252, 205);
+}
+
+.card-content > .title {
+  white-space: pre;
+  margin-left: 10px;
+  translate: 0 100%;
+  opacity: 0;
+}
+.card:hover .title {
+  opacity: 1;
+  translate: 0 0;
+}
+
+.card > .backdrop {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100px;
+  z-index: 0;
+  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7));
 }
