--- a/aset/style/mem-team.css
+++ b/aset/style/mem-team.css
@@ -605,7 +605,7 @@ display: flex;
 .dropdown ul {
   position: absolute;
   background: #21242d;
-  height:auto;
+  height: auto;
   width: 120px;
   right: 0;
   top: 20px;
@@ -944,7 +944,7 @@ input:focus,
  
   border-radius: 10px;
   position: relative;
-
+  top: 50%;
   transform: scale(1);
   transform-origin: top;
   overflow: hidden;
@@ -1521,4 +1521,68 @@ background-color: rgb(195 124 124 / 0%);
   opacity: 0.9;
 }
 
+
+
+        /* Reset <select> defaults */
+        select {
+            appearance: none;
+            border: 0;
+            outline: 0;
+            background: none;
+            color: inherit;
+            box-shadow: none;
+              justify-content: center; /* Pusatkan secara horizontal */
+            align-items: center; /* Pusatkan secara vertikal */
+        }
+
+        select::-ms-expand {
+            display: none;
+        }
+
+        /* Custom Select wrapper */
+        .select {
+            position: relative;
+            display: flex;
+         
+            background: linear-gradient(to left, #34495e 3rem, #2c3e50 3rem);
+            border-radius: 0.25rem;
+            overflow: hidden;
+        }
+
+     
+      .select select {
+            flex: 1;
+            padding: 1em;
+            cursor: pointer;
+            color: white; /* Change the text color for the select */
+            background-color: #283349; /* Change background color for the select */
+        }
+    .select select option {
+            background-color: #34495e; /* Background color for options */
+            color: white; /* Text color for options */
+        }
+
+        .select::after {
+            content: "\25BC";
+            position: absolute;
+            right: 1rem;
+            top: 1rem;
+            transition: 0.25s all ease;
+            pointer-events: none; 
+        }
+
+        
+        .select:hover::after {
+            color: #f39c12;
+            animation: bounce 0.5s infinite;
+        }
+
+        @keyframes bounce {
+            25% {
+                transform: translateY(5px);
+            }
+            75% {
+                transform: translateY(-5px);
+            }
+        }
 
