--- a/aset/style/mem-archie.css
+++ b/aset/style/mem-archie.css
@@ -1714,6 +1714,7 @@ background-color: rgb(195 124 124 / 0%);
             font-size: 14px;
             margin-top: 5px;
         }
+/*paging*/
 
         .pagination-component * {
     margin: 0;
